src/ruby.d

module ruby;

import core.stdc.stdarg;
import core.stdc.config;

extern (C):

alias c_ulong VALUE;
alias c_ulong ID;
alias char[1] ruby_check_sizeof_int;
alias char[1] ruby_check_sizeof_long;
alias char[1] ruby_check_sizeof_long_long;
alias char[1] ruby_check_sizeof_voidp;
alias rb_classext_struct rb_classext_t;
alias rb_data_type_struct rb_data_type_t;
alias void function (void*) RUBY_DATA_FUNC;
alias <unimplemented> ruby_glob_func;
alias <unimplemented> rb_gvar_getter_t;
alias <unimplemented> rb_gvar_setter_t;
alias <unimplemented> rb_gvar_marker_t;
alias <unimplemented> rb_block_call_func;
alias <unimplemented>* rb_block_call_func_t;
alias c_ulong rb_event_flag_t;
alias void function (c_ulong, c_ulong, c_ulong, c_ulong, c_ulong) rb_event_hook_func_t;

extern __gshared VALUE rb_mKernel;
extern __gshared VALUE rb_mComparable;
extern __gshared VALUE rb_mEnumerable;
extern __gshared VALUE rb_mErrno;
extern __gshared VALUE rb_mFileTest;
extern __gshared VALUE rb_mGC;
extern __gshared VALUE rb_mMath;
extern __gshared VALUE rb_mProcess;
extern __gshared VALUE rb_mWaitReadable;
extern __gshared VALUE rb_mWaitWritable;
extern __gshared VALUE rb_cBasicObject;
extern __gshared VALUE rb_cObject;
extern __gshared VALUE rb_cArray;
extern __gshared VALUE rb_cBignum;
extern __gshared VALUE rb_cBinding;
extern __gshared VALUE rb_cClass;
extern __gshared VALUE rb_cCont;
extern __gshared VALUE rb_cDir;
extern __gshared VALUE rb_cData;
extern __gshared VALUE rb_cFalseClass;
extern __gshared VALUE rb_cEncoding;
extern __gshared VALUE rb_cEnumerator;
extern __gshared VALUE rb_cFile;
extern __gshared VALUE rb_cFixnum;
extern __gshared VALUE rb_cFloat;
extern __gshared VALUE rb_cHash;
extern __gshared VALUE rb_cInteger;
extern __gshared VALUE rb_cIO;
extern __gshared VALUE rb_cMatch;
extern __gshared VALUE rb_cMethod;
extern __gshared VALUE rb_cModule;
extern __gshared VALUE rb_cNameErrorMesg;
extern __gshared VALUE rb_cNilClass;
extern __gshared VALUE rb_cNumeric;
extern __gshared VALUE rb_cProc;
extern __gshared VALUE rb_cRandom;
extern __gshared VALUE rb_cRange;
extern __gshared VALUE rb_cRational;
extern __gshared VALUE rb_cComplex;
extern __gshared VALUE rb_cRegexp;
extern __gshared VALUE rb_cStat;
extern __gshared VALUE rb_cString;
extern __gshared VALUE rb_cStruct;
extern __gshared VALUE rb_cSymbol;
extern __gshared VALUE rb_cThread;
extern __gshared VALUE rb_cTime;
extern __gshared VALUE rb_cTrueClass;
extern __gshared VALUE rb_cUnboundMethod;
extern __gshared VALUE rb_eException;
extern __gshared VALUE rb_eStandardError;
extern __gshared VALUE rb_eSystemExit;
extern __gshared VALUE rb_eInterrupt;
extern __gshared VALUE rb_eSignal;
extern __gshared VALUE rb_eFatal;
extern __gshared VALUE rb_eArgError;
extern __gshared VALUE rb_eEOFError;
extern __gshared VALUE rb_eIndexError;
extern __gshared VALUE rb_eStopIteration;
extern __gshared VALUE rb_eKeyError;
extern __gshared VALUE rb_eRangeError;
extern __gshared VALUE rb_eIOError;
extern __gshared VALUE rb_eRuntimeError;
extern __gshared VALUE rb_eSecurityError;
extern __gshared VALUE rb_eSystemCallError;
extern __gshared VALUE rb_eThreadError;
extern __gshared VALUE rb_eTypeError;
extern __gshared VALUE rb_eZeroDivError;
extern __gshared VALUE rb_eNotImpError;
extern __gshared VALUE rb_eNoMemError;
extern __gshared VALUE rb_eNoMethodError;
extern __gshared VALUE rb_eFloatDomainError;
extern __gshared VALUE rb_eLocalJumpError;
extern __gshared VALUE rb_eSysStackError;
extern __gshared VALUE rb_eRegexpError;
extern __gshared VALUE rb_eEncodingError;
extern __gshared VALUE rb_eEncCompatError;
extern __gshared VALUE rb_eScriptError;
extern __gshared VALUE rb_eNameError;
extern __gshared VALUE rb_eSyntaxError;
extern __gshared VALUE rb_eLoadError;
extern __gshared VALUE rb_eMathDomainError;
extern __gshared VALUE rb_stdin;
extern __gshared VALUE rb_stdout;
extern __gshared VALUE rb_stderr;

enum ruby_special_consts
{
    RUBY_Qfalse = 0,
    RUBY_Qtrue = 20,
    RUBY_Qnil = 8,
    RUBY_Qundef = 52,
    RUBY_IMMEDIATE_MASK = 7,
    RUBY_FIXNUM_FLAG = 1,
    RUBY_FLONUM_MASK = 3,
    RUBY_FLONUM_FLAG = 2,
    RUBY_SYMBOL_FLAG = 12,
    RUBY_SPECIAL_SHIFT = 8
}

enum ruby_value_type
{
    RUBY_T_NONE = 0,
    RUBY_T_OBJECT = 1,
    RUBY_T_CLASS = 2,
    RUBY_T_MODULE = 3,
    RUBY_T_FLOAT = 4,
    RUBY_T_STRING = 5,
    RUBY_T_REGEXP = 6,
    RUBY_T_ARRAY = 7,
    RUBY_T_HASH = 8,
    RUBY_T_STRUCT = 9,
    RUBY_T_BIGNUM = 10,
    RUBY_T_FILE = 11,
    RUBY_T_DATA = 12,
    RUBY_T_MATCH = 13,
    RUBY_T_COMPLEX = 14,
    RUBY_T_RATIONAL = 15,
    RUBY_T_NIL = 17,
    RUBY_T_TRUE = 18,
    RUBY_T_FALSE = 19,
    RUBY_T_SYMBOL = 20,
    RUBY_T_FIXNUM = 21,
    RUBY_T_UNDEF = 27,
    RUBY_T_NODE = 28,
    RUBY_T_ICLASS = 29,
    RUBY_T_ZOMBIE = 30,
    RUBY_T_MASK = 31
}

struct RBasic
{
    VALUE flags;
    const VALUE klass;
}

struct RObject
{
    RBasic basic;
    union
    {
        struct
        {
            c_long numiv;
            VALUE* ivptr;
            st_table* iv_index_tbl;
        }
        VALUE[3] ary;
    }
}

struct RClass
{
    RBasic basic;
    VALUE super_;
    rb_classext_t* ptr;
    method_table_wrapper* m_tbl_wrapper;
}

struct RFloat
{
    RBasic basic;
    double float_value;
}

struct RString
{
    RBasic basic;
    union
    {
        struct
        {
            c_long len;
            char* ptr;
            union
            {
                c_long capa;
                VALUE shared_;
            }
        }
        char[24] ary;
    }
}

struct RArray
{
    RBasic basic;
    union
    {
        struct
        {
            c_long len;
            union
            {
                c_long capa;
                VALUE shared_;
            }
            const(VALUE)* ptr;
        }
        const VALUE[3] ary;
    }
}

struct RRegexp
{
    RBasic basic;
    re_pattern_buffer* ptr;
    const VALUE src;
    c_ulong usecnt;
}

struct RHash
{
    RBasic basic;
    st_table* ntbl;
    int iter_lev;
    const VALUE ifnone;
}

struct RFile
{
    RBasic basic;
    rb_io_t* fptr;
}

struct RRational
{
    RBasic basic;
    const VALUE num;
    const VALUE den;
}

struct RComplex
{
    RBasic basic;
    const VALUE real_;
    const VALUE imag;
}

struct RData
{
    RBasic basic;
    void function (void*) dmark;
    void function (void*) dfree;
    void* data;
}

struct rb_data_type_struct
{
    const(char)* wrap_struct_name;
    struct
    {
        void function (void*) dmark;
        void function (void*) dfree;
        size_t function (const(void)*) dsize;
        void*[2] reserved;
    }
    const(rb_data_type_t)* parent;
    void* data;
    VALUE flags;
}

struct RTypedData
{
    RBasic basic;
    const(rb_data_type_t)* type;
    VALUE typed_flag;
    void* data;
}

struct RStruct
{
    RBasic basic;
    union
    {
        struct
        {
            c_long len;
            const(VALUE)* ptr;
        }
        const VALUE[3] ary;
    }
}

struct RBignum
{
    RBasic basic;
    union
    {
        struct
        {
            c_long len;
            uint* digits;
        }
        uint[6] ary;
    }
}

struct rb_global_variable;


struct rb_classext_struct;

